--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: botika_socket_client
-description: A starting point for Dart libraries or applications.
-version: 1.0.0
-# homepage: https://www.example.com
+description: Botika Socket Client Flutter Plugin
+version: 0.1.0
+homepage: https://github.com/botika-online/botika-socket-client-flutter
+repository: https://github.com/botika-online/botika-socket-client-flutter
+issue_tracker: https://github.com/botika-online/botika-socket-client-flutter/issues
 
 environment:
   sdk: '>=2.16.1 <3.0.0'
